--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -8,19 +8,21 @@ metadata:
     cert-manager.io/cluster-issuer: letsencrypt
 spec:
   rules:
-  - host: {{ .Values.domain }}
+{{- range .Values.domains }}
+  - host: {{ . }}
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: {{ .Values.appName }}-wordpress
+            name: {{ $.Values.appName }}-service
             port:
               number: 80
+{{- end }}
   tls:
     - hosts:
-        - {{ required "The domain value is required!" .Values.domain }}
-      secretName: {{ .Values.tlsSecretName | default (printf "%s-tls" .Values.appName) }}
-
-
+{{- range .Values.domains }}
+        - {{ . }}
+{{- end }}
+      secretName: {{ .Values.tlsSecretName | default (printf \"%s-tls\" .Values.appName) }}
