--- a/templates/nginx-configmap.yaml
+++ b/templates/nginx-configmap.yaml
@@ -7,7 +7,7 @@ data:
   default.conf: |
     server {
         listen 80;
-        server_name {{ .Values.domain }};
+        server_name _;
         root /var/www/html;
 
         index index.php index.html;
