--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -24,5 +24,5 @@ spec:
 {{- range .Values.domains }}
     - hosts:
       - "{{ . }}"
-      secretName: "{{ $.Values.appName }}-{{ . | replace '.' '-' }}-tls"
+      secretName: "{{ $.Values.appName }}-{{ . | toString | replace "." "-" }}-tls"
 {{- end }}
