--- a/templates/ingress.yaml
+++ b/templates/ingress.yaml
@@ -16,7 +16,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: {{ $.Values.appName }}-service
+            name: {{ $.Values.appName }}-wordpress
             port:
               number: 80
 {{- end }}
