--- a/templates/role.yaml
+++ b/templates/role.yaml
@@ -1,8 +1,14 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: {{ .Values.appName }}-service-account
+  namespace: {{ .Release.Namespace | default "default" }}
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ .Values.appName }}-secrets-role
-  namespace: default
+  name: {{ .Values.appName }}-role
+  namespace: {{ .Release.Namespace | default "default" }}
 rules:
   - apiGroups: [""]
     resources: ["secrets"]
@@ -13,13 +19,13 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ .Values.appName }}-secrets-binding
-  namespace: default
+  name: {{ .Values.appName }}-binding
+  namespace: {{ .Release.Namespace | default "default" }}
 subjects:
   - kind: ServiceAccount
     name: {{ .Values.appName }}-service-account
-    namespace: default
+    namespace: {{ .Release.Namespace | default "default" }}
 roleRef:
   kind: Role
-  name: {{ .Values.appName }}-secrets-role
+  name: {{ .Values.appName }}-role
   apiGroup: rbac.authorization.k8s.io
